--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "fs": "0.0.1-security",
     "rxjs": "^5.5.6",
+    "web-audio-api": "^0.2.2",
+    "web-audio-player": "^1.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
