--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "0.0.1-security",
     "rxjs": "^5.5.6",
     "web-audio-api": "^0.2.2",
+    "web-audio-beat-detector": "^6.0.0",
     "web-audio-player": "^1.3.2",
     "zone.js": "^0.8.19"
   },
