--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bopper": "^2.11.0",
     "core-js": "^2.4.1",
     "fs": "0.0.1-security",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
+    "soundbank-granular": "^2.0.1",
     "web-audio-api": "^0.2.2",
     "web-audio-beat-detector": "^6.0.0",
     "web-audio-player": "^1.3.2",
@@ -35,7 +40,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.96",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
